# dialog-snapshots

./: CHANGES  Makefile  README  README.1st  TODO  VERSION  aclocal.m4  argv.c  arrows.c  buildlist.c  buttons.c  calendar.c  cdialog.lsm  checklist.c  colors.h  columns.c  config.guess  config.sub  configure  configure.in  demo.pl  dialog-config.in  dialog.1  dialog.3  dialog.c  dialog.h  dialog.lsm  dialog.pl  dlg_colors.h  dlg_internals.h  dlg_keys.c  dlg_keys.h  editbox.c  formbox.c  fselect.c  gen-pkgconfig.in  guage.c  headers-sh.in  headers.sh  help.c  (+23 more)
debian/: changelog  control  copyright  rules
package/: dialog.map  dialog.spec  dialog.sym
package/debian/: cdialog-dev.install  cdialog.install  cdialog.lintian-overrides  changelog  control  copyright  rules
package/freebsd/: Makefile
package/pkgsrc/: Makefile  distinfo
po/: Makefile.inn  POTFILES.in  ar.po  be@latin.po  bg.po  ca.po  cs.po  cy.po  da.po  de.po  dialog.pot  el.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  lt.po  lv.po  makefile.inn  mg.po  mk.po  ms.po  nl.po  pl.po  pt.po  pt_BR.po  rm.po  ro.po  ru.po  (+11 more)
samples/: README  buildlist2  calendar  calendar2  calendar3  checklist  checklist-utf8  checklist1  checklist2  checklist3  checklist4  checklist5  checklist6  checklist7  checklist8  checklist9.txt  copismall  debian.rc  editbox  form1  form2  form3  form4  form5  fselect  fselect1  fselect2  gauge  gauge0  gauge0-input-fd  gauge2  gauge3  guage  infobox  infobox2  infobox3  infobox4  infobox5  infobox6  inputbox  (+57 more)
samples/copifuncs/: admin.funcs  copi.funcs  copi.wheel
samples/install/: Makefile  dialog.h  setup.c
